# xcat-core

./: .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Makefile  QUICKSTART  README  README.md  README.rst  Release  Version  Zone.pm  build-debianrepo  build-debs  build-debs-all  build-python-deb  build-ubunturepo  buildcore.sh  buildcore20.sh  buildcore21.sh  builddep.sh  buildlenovodebs.sh  buildlocal.sh  buildrpms.pl  ci_test  comps.xml  create_man_pages.py  debperldepends  github_action_xcat_test.pl  go-release  makeclientdeb  makeclientrpm  makedebs  makegenesisbuilderrpm  makehpcrpm  makenbrootrpm  makeperlxcatdeb  makeperlxcatrpm  makepythonrpm  (+22 more)
.github/: fix_issue_template.md
build-utils/: rpmsign.exp  unsignedrpms.sh
db/: uuid
doc/: configuration.pod
docs/: Makefile  README.md  index.html  maintainers.md  make.bat  requirements.txt  xcat-ccla-corporate.md  xcat-cla-individual.md
goconserver/: build  dirty-debuild  dirty-rpmbuild  prep-tarball
perl-xCAT/: README  db2man  modifyUtils  perl-xCAT.spec
perl-xCAT-2.0/: Makefile.PL  README  db2man  perl-xCAT.spec  xCAT2.0.doc  xCAT2onAIX.doc
source/: help.rst  index.rst
src/: proxydhcp.c  xcatflowrequest.c
uftp/: README  uftp-4.9.3-1.ppc64le.rpm  uftp-debuginfo-4.9.3-1.ppc64le.rpm  uftp-listener  uftp-listener.service  uftp.spec
xCAT-IBMhpc/: xCAT-IBMhpc.spec
xCAT-OpenStack/: db2man  xCAT-OpenStack.spec
xCAT-OpenStack-baremetal/: xCAT-OpenStack-baremetal.spec  xpod2man
xCAT-OpenStack-ironic/ironic_baremetal/: README.rst  openstack-common.conf  setup.cfg  setup.py
xCAT-OpenStack-ironic/ironic_baremetal/ironic/drivers/: xcat.py
xCAT-OpenStack-ironic/ironic_baremetal/ironic/drivers/modules/: xcat_exception.py  xcat_neutron.py  xcat_pxe.py  xcat_rpower.py  xcat_util.py
xCAT-SoftLayer/: xCAT-SoftLayer.spec  xpod2man
xCAT-UI/: .project  change.php  command.php  config.php  configure.php  discover.php  ganglianode.php  guide.php  help.php  index.php  logentry.php  main.php  monitor.php  noderangesource.php  provision.php  rangeDisplay.php  rcons.php  rconsShow.php  service.php  site.php  summary.php  update.php  xCAT-UI.spec  xCAT-web.spec
xCAT-aix/: mkxCATaixpkg  xCAT-aix.spec
xCAT-buildkit/: xCAT-buildkit.spec  xCAT-buildkit.spec.broken
xCAT-client/: openstack.versions  podchecker  xCAT-client.spec  xpod2man
xCAT-client-2.0/: xCAT-client.spec  xpod2man
xCAT-confluent/: xCAT-confluent.spec  xpod2man
xCAT-csm/: csm.compute.rhels7.ppc64le.pkglist  csm.launch.rhels7.ppc64le.pkglist  csm.login.rhels7.ppc64le.pkglist  csm.service.rhels7.ppc64le.pkglist  csm.workloadmanager.rhels7.ppc64le.pkglist  xCAT-csm.spec
xCAT-genesis-builder/: README.md  (+18 more)
(+5392 files in other folders)
