[metadata]
name = ironic
version = 2014.2
summary = OpenStack Bare Metal Provisioning
description-file =
    README.rst
author = chenglch
author-email = chenglch@cn.ibm.com
home-page = http://xcat.sf.net/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    ironic

[entry_points]
ironic.drivers =    
    agent_ipmitool = ironic.drivers.agent:AgentAndIPMIToolDriver
	agent_pyghmi = ironic.drivers.agent:AgentAndIPMINativeDriver
	agent_ssh = ironic.drivers.agent:AgentAndSSHDriver
	fake = ironic.drivers.fake:FakeDriver
	fake_agent = ironic.drivers.fake:FakeAgentDriver
	fake_iboot = ironic.drivers.fake:FakeIBootDriver
	fake_ipminative = ironic.drivers.fake:FakeIPMINativeDriver
	fake_ipmitool = ironic.drivers.fake:FakeIPMIToolDriver
	fake_pxe = ironic.drivers.fake:FakePXEDriver
	fake_seamicro = ironic.drivers.fake:FakeSeaMicroDriver
	fake_ssh = ironic.drivers.fake:FakeSSHDriver
	ilo = ironic.drivers.ilo:IloDriver
	pxe_iboot = ironic.drivers.pxe:PXEAndIBootDriver
	pxe_ipminative = ironic.drivers.pxe:PXEAndIPMINativeDriver
	pxe_ipmitool = ironic.drivers.pxe:PXEAndIPMIToolDriver
	pxe_seamicro = ironic.drivers.pxe:PXEAndSeaMicroDriver
	pxe_ssh = ironic.drivers.pxe:PXEAndSSHDriver
	pxe_xcat = ironic.drivers.xcat:XCATBaremetalDriver

[pbr]
autodoc_index_modules = True

[global]
setup-hooks =
    pbr.hooks.setup_hook
